style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');

aside {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    height: 60px;
    padding: 15px;
}
.container {
    display: flex;
    width: 100%;
}
main {
    width: 100%;
}
.navbar {
    display: flex;
    justify-content: space-between;
    padding: 10px 0;
}
.side-bar {
    height: 100%;
    width: 17%;
    background-color: white;
    overflow-y: hidden;
}
.left {
    display: flex;
    align-items: center;
}
.left #menu {
    padding: 0 7px;
    cursor: pointer;
}
.search {
    display: flex;
    
    align-items: center;
    justify-content: center;
}
.search form {
    display: flex;
    align-items: center;
    border: 1px solid #ddd;
    height: 45px;
    margin-bottom: 0;
   }
   .search input {
    width: 600px;
    padding:10px;
    border: 0;
    height: 100%;
    border-radius: 2px 0 0 2px
  }
  
  input:focus {
    outline: none;
    border: 1px solid #ddd;
  }
  .search button {
    height: 100%;
    width: 60px;
    border: none;
  }
   
  
  .material-icons {
    color: rgb(100, 100, 100);
    padding: 0 7px;
    cursor: pointer;
    font-size: 35px;
  }
  .mic {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: lightgray;
    border-radius: 50%;
    padding: 3px;
    margin-left: 10px;
    margin-top: 5px;
    width: 38px;
    height: 38px;
  }
  .nav {
    width: 100%;
    display: flex;
    flex-direction: column;
    margin-bottom: 15px;
    margin-top: 15px;
  }
  .nav-link, .nav i {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px 0;
  }
  
 .nav-link span {
    font-size: 12px;
  }
  
 .nav-link:hover {
    background: #e5e5e5;
    cursor: pointer;
  }
 .right {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-right: 50px;
    height: 100%;
 }
 
 .right i {
    min-width: 30px;
 }

 .active {
    background: #e5e5e5;
 }
 hr {
    height: 1px;
    background-color: #e5e5e5;
    border: none;
  }

  .tags {
    display: flex;
    height: fit-content;
    padding: 10px 15px;
    gap: 15px;
    border-top: 1px solid #ccc;
    width: 100%;
    flex-wrap: wrap;
    
  }
  .tag {
    
    height: fit-content;
    padding: 5px 15px;
    border-radius: 25px;
    border: 1px solid black;
  }
  .dark {
    background-color: black;
    color: white;
  }
  .light {
    background-color: rgb(226, 226, 226);
  }
.grid {
    background-color: rgb(231, 229, 229);
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
}
.video-container {
    font-weight: 700;
    font-size: 20px;
    padding: 10px;
    max-width: 320px;
    display: flex;
    flex-direction: column;
}
.views-container {
    font-size: 14px;
    font-weight: 300;
    display: flex;
    gap: 20px;
}
.video-info {
    display: flex;
    
}
.video-info img {
    height: fit-content;
    padding: 10px;
}
@media (max-width: 768px) {
    .side-bar {
      display: none;
    }
  }

